# veman

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: commands.md  index.md  quickstart.md  releases.md
veman/: __init__.py  __main__.py  _version.py  main.py
