[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "veman"
authors = [{name = "Mikael Tranbom"}, {email = "mikael@tranbom.io"}]
description = "Virtual environment manager for venv"
requires-python = ">=3.9"
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
keywords = [
    "venv", "virtual environment", "utility",
    "developer tools", "virtual environment manager"
]
readme = "README.md"

dynamic = ["version"]

[project.scripts]
veman = "veman:main.main"

[project.urls]
"Homepage" = "https://gitlab.com/tranbom/veman"
"Repository" = "https://gitlab.com/tranbom/veman"

[tool.setuptools.dynamic]
version = {attr = "veman.__version__"}

[tool.setuptools.packages.find]
include = ["veman"]
exclude = ["veman.tests*", "tests*"]

[tool.pylint.main]
max-branches = 18
