[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "veman"
authors = [{name = "Mikael Tranbom"}, {email = "mikael@tranbom.io"}]
description = "Virtual environment manager for venv"
requires-python = ">=3.9"
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
keywords = [
    "venv", "virtual environment", "utility",
    "developer tools", "virtual environment manager"
]
readme = "README.md"

dynamic = ["version"]

[project.scripts]
veman = "veman:main.main"

[project.urls]
"Homepage" = "https://tranbom.io/veman/"
"Repository" = "https://gitlab.com/tranbom/veman"
"Documentation" = "https://tranbom.io/veman/"

[tool.setuptools.dynamic]
version = {attr = "veman.__version__"}

[tool.setuptools.packages.find]
include = ["veman"]
exclude = ["veman.tests*", "tests*"]

[tool.pylint.main]
max-args = 10
max-attributes = 16
max-branches = 28
